<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/sky"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0.20"
        android:shrinkColumns="*"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/firstrow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:shrinkColumns="*"
            android:stretchColumns="*"
            tools:ignore="UselessParent" >

            <EditText
                android:id="@+id/locationText"
                android:layout_width="156dp"
                android:layout_height="36dp"
                android:background="@drawable/rounded_corners"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

            <RadioGroup
                android:id="@+id/searchTypeRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/faranhiteRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/faranhiet" />

                <RadioButton
                    android:id="@+id/degreeRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/degree" />
            </RadioGroup>

            <Button
                android:id="@+id/searchButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:text="@string/search" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textColor="#ffffff"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="serif" >
    </TextView>

    <TextView
        android:id="@+id/stateCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" >
    </TextView>

    <ImageView
        android:id="@+id/weatherImg"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_gravity="center"
        android:layout_marginTop="23dp"
        android:contentDescription="@string/img" />

    <TextView
        android:id="@+id/currentTemprature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" >
    </TextView>

    <TextView
        android:id="@+id/currentWeather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" >
    </TextView>

    <TextView
        android:id="@+id/caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/forecast"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:visibility="invisible" >
    </TextView>

    <TableLayout
        android:id="@+id/forecastTable"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight=".8"
        android:shrinkColumns="*"
        android:stretchColumns="*"
        android:visibility="invisible" >

        <TableRow
            android:id="@+id/forecastCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >
        </TableRow>

        <TableRow
            android:id="@+id/forecastTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8B8B8B"
            android:gravity="center" >

            <TextView
                android:id="@+id/dayTextView"
                android:layout_margin="1dip"
                android:layout_weight=".2"
                android:background="#D1D1D1"
                android:gravity="center"
                android:text="@string/day"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/weatherTextView"
                android:layout_margin="1dip"
                android:background="#CACACA"
                android:gravity="center"
                android:text="@string/weather"
                android:textStyle="bold"
                android:typeface="serif" >
            </TextView>

            <TextView
                android:id="@+id/highTextView"
                android:layout_margin="1dip"
                android:background="#CACACA"
                android:gravity="center"
                android:text="@string/high"
                android:textStyle="bold"
                android:typeface="serif" >
            </TextView>

            <TextView
                android:id="@+id/lowTextView"
                android:layout_margin="1dip"
                android:background="#CACACA"
                android:gravity="center"
                android:text="@string/low"
                android:textStyle="bold"
                android:typeface="serif" >
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/forecastDay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8B8B8B" >

            <TextView
                android:id="@+id/day1TextView"
                android:layout_margin="1dip"
                android:layout_weight=".2"
                android:background="#ffffff"
                android:gravity="center"
                android:text=""
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/weather1TextView"
                android:layout_margin="1dip"
                android:background="#ffffff"
                android:gravity="center"
                android:text=""
                android:textStyle="bold"
                android:typeface="serif" >
            </TextView>

            <TextView
                android:id="@+id/high1TextView"
                android:layout_margin="1dip"
                android:background="#ffffff"
                android:gravity="center"
                android:text=""
                android:textColor="#FFC73E"
                android:textStyle="bold"
                android:typeface="serif" >
            </TextView>

            <TextView
                android:id="@+id/low1TextView"
                android:layout_margin="1dip"
                android:background="#ffffff"
                android:gravity="center"
                android:text=""
                android:textColor="#39B7CD"
                android:textStyle="bold"
                android:typeface="serif" >
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/forecastDay2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8B8B8B" >

            <TextView
                android:id="@+id/day2TextView"
                android:layout_margin="1dip"
                android:layout_weight=".2"
                android:background="#E0FFFF"
                android:gravity="center"
                android:text=""
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/weather2TextView"
                android:layout_width="match_parent"
                android:layout_margin="1dip"
                android:background="#E0FFFF"
                android:gravity="center"
                android:text=""
                android:textStyle="bold"
                android:typeface="serif" >
            </TextView>

            <TextView
                android:id="@+id/high2TextView"
                android:layout_margin="1dip"
                android:background="#E0FFFF"
                android:gravity="center"
                android:text=""
                android:textColor="#FFC73E"
                android:textStyle="bold"
                android:typeface="serif" >
            </TextView>

            <TextView
                android:id="@+id/low2TextView"
                android:layout_margin="1dip"
                android:background="#E0FFFF"
                android:gravity="center"
                android:text=""
                android:textColor="#39B7CD"
                android:textStyle="bold"
                android:typeface="serif" >
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/forecastDay3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8B8B8B" >

            <TextView
                android:id="@+id/day3TextView"
                android:layout_width="match_parent"
                android:layout_margin="1dip"
                android:layout_weight=".2"
                android:background="#ffffff"
                android:gravity="center"
                android:text=""
                android:textStyle="bold" >

            </TextView>

            <TextView
                android:id="@+id/weather3TextView"
                android:layout_margin="1dip"
                android:background="#ffffff"
                android:gravity="center"
                android:text=""
                android:textStyle="bold"
                android:typeface="serif" >
            </TextView>

            <TextView
                android:id="@+id/high3TextView"
                android:layout_margin="1dip"
                android:background="#ffffff"
                android:gravity="center"
                android:text=""
                android:textColor="#FFC73E"
                android:textStyle="bold"
                android:typeface="serif" >
            </TextView>

            <TextView
                android:id="@+id/low3TextView"
                android:layout_margin="1dip"
                android:background="#ffffff"
                android:gravity="center"
                android:text=""
                android:textColor="#39B7CD"
                android:textStyle="bold"
                android:typeface="serif" >
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/forecastDay4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8B8B8B" >

            <TextView
                android:id="@+id/day4TextView"
                android:layout_margin="1dip"
                android:layout_weight=".2"
                android:background="#E0FFFF"
                android:gravity="center"
                android:text=""
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/weather4TextView"
                android:layout_margin="1dip"
                android:background="#E0FFFF"
                android:gravity="center"
                android:text=""
                android:textStyle="bold"
                android:typeface="serif" >
            </TextView>

            <TextView
                android:id="@+id/high4TextView"
                android:layout_margin="1dip"
                android:background="#E0FFFF"
                android:gravity="center"
                android:text=""
                android:textColor="#FFC73E"
                android:textStyle="bold"
                android:typeface="serif" >
            </TextView>

            <TextView
                android:id="@+id/low4TextView"
                android:layout_margin="1dip"
                android:background="#E0FFFF"
                android:gravity="center"
                android:text=""
                android:textColor="#39B7CD"
                android:textStyle="bold"
                android:typeface="serif" >
            </TextView>
        </TableRow>

        <TableRow
            android:id="@+id/forecastDay5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8B8B8B" >

            <TextView
                android:id="@+id/day5TextView"
                android:layout_margin="1dip"
                android:background="#ffffff"
                android:gravity="center"
                android:text=""
                android:textStyle="bold"
                android:width="100dp" >
            </TextView>

            <TextView
                android:id="@+id/weather5TextView"
                android:layout_margin="1dip"
                android:background="#ffffff"
                android:gravity="center"
                android:text=""
                android:textStyle="bold"
                android:typeface="serif" >
            </TextView>

            <TextView
                android:id="@+id/high5TextView"
                android:layout_margin="1dip"
                android:background="#ffffff"
                android:gravity="center"
                android:text=""
                android:textColor="#FFC73E"
                android:textStyle="bold"
                android:typeface="serif" >
            </TextView>

            <TextView
                android:id="@+id/low5TextView"
                android:layout_margin="1dip"
                android:background="#ffffff"
                android:gravity="center"
                android:text=""
                android:textColor="#39B7CD"
                android:textStyle="bold"
                android:typeface="serif" >
            </TextView>
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/temp1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text=""
                android:textColor="#ffffff" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/shareCurrentWeather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shareCurrentWeather"
                android:textColor="#ffffff" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/temp2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text=""
                android:textColor="#ffffff" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/shareWeatherForecast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/shareWeatherForecast"
                android:textColor="#ffffff" />
        </TableRow>
    </TableLayout>

</LinearLayout>